--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1329,7 +1329,7 @@ li.tg-rss a { background:#ff6600; }
 .tg-formbannersearch .form-group{
 	margin: 0;
 	float: left;
-	width: 33.33%;
+	width: 50%;
 	padding: 0 0 0 60px;
 	border-left: 1px solid #dbdbdb;
 }
@@ -2207,6 +2207,15 @@ li.tg-rss a { background:#ff6600; }
 .tg-footernav:before{
 	top: 0;
 	right: 100%;
+	content: '';
+	width: 9999px;
+	height: 100%;
+	position: absolute;
+	background: rgba(0,0,0,0.20);
+}
+.tg-footernav:after{
+	top: 0;
+	left: 100%;
 	content: '';
 	width: 9999px;
 	height: 100%;
